[package]
name = "omni_camera"
version = "0.6.3"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "omni_camera"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "macros", "abi3-py39", "generate-import-lib"] }
#nokhwa = { git="https://github.com/l1npengtul/nokhwa.git", branch="0.10", features = ["input-v4l", "input-msmf", "output-threaded", "input-avfoundation", "input-native"] }
nokhwa = { path = "vendor/nokhwa", features = ["input-v4l", "input-msmf", "output-threaded", "input-avfoundation", "input-native"] }
image = { version="0.25.6", default-features = false }
parking_lot = "^0.11"
