[package]
name = "omni_camera"
version = "0.6.3"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "omni_camera"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "macros", "abi3-py39", "generate-import-lib"] }
nokhwa = { git="https://github.com/arendjankramer/nokhwa.git", rev="17c0ee4b6fc8eae1fbdfa21f33c7076e27f666c0", features = ["input-v4l", "input-msmf", "output-threaded", "input-avfoundation", "input-native"] }
#nokhwa = { path = "vendor/nokhwa", features = ["input-v4l", "input-msmf", "output-threaded", "input-avfoundation", "input-native"] }
image = { version="0.25.6", default-features = false }
parking_lot = "^0.11"
once_cell = "1.21.3"

[dev-dependencies]
minifb = "0.25"